objects/Veda_credit_Enquiry__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Enquiry_Classification__c</fullName>
        <label>Credit Enquiry Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfEnquiry__c</fullName>
        <label>TypeOfEnquiry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipName>credit_Enquirys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>account_Type_Code__c</fullName>
        <label>account Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_Type__c</fullName>
        <label>account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>co_Borrower__c</fullName>
        <label>co Borrower</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>credit_Enquirer_Name__c</fullName>
        <label>credit Enquirer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enquiryDate__c</fullName>
        <label>enquiry Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enquiry_Amount_Currency_Code__c</fullName>
        <label>enquiry Amount Currency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enquiry_Amount__c</fullName>
        <label>enquiry Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enquiry_Client_Reference__c</fullName>
        <label>enquiry Client Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_References__c</fullName>
        <label>id References</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationship_Code__c</fullName>
        <label>relationship Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationship__c</fullName>
        <label>relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda credit Enquiry</label>
    <nameField>
        <label>credit Enquiry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda credit Enquirys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>